2020-08-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_settings_dialog.c: Increase RipperTypeSwitch spacing so as
      to horizontally align with RipperRotationSwitch below. Utilize gEDA
      text combo box instead of awkward Gtk combo for:

        * AntiAliasCombo
        * ColorMapSchemeCombo
        * RendererCombo
        * RipperSymbolCombo

2020-08-08 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/el.po: Update Greek translations.
    * po/fa.po: Update Persian translations.
    * po/fr.po: Update French translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.

2020-08-07 Wiley E. Hill <wileyhill@gmail.com>

    * include/x_toolbars.h: Change ToolBarInfo member toolbar to type
      GedaToolbar.

    * src/x/x_toolbars.c: Replace gtk_toolbar_get_orientation with
      geda_toolbar_get_orientation.

2020-08-01 Wiley E. Hill <wileyhill@gmail.com>

    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/fi.po: Update Finnish translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/ru.po: Update Russian translations.
    * po/sv.po: Update Swedish translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.

2020-07-31 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_break.c: Replace geda_struct_tile_update_object and
      geda_struct_conn_update_object with geda_object_update in function
      o_break_net.

2020-07-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_settings_dialog.c: Make color_button_popup_destroy static.
      Utilize GetGedaCombo macro. Utilize gEDA text combo box instead of
      awkward Gtk combo for:

        * DotGridModeCombo