@@ -1,3 +1,7 @@
+2020-08-11 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x/x_settings_dialog.c: Increase width of RipperSymbolCombo.
+
 2020-08-10 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/x/x_settings_dialog.c: Increase RipperTypeSwitch spacing so as
